--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vitest": "^0.28.4"
   },
   "dependencies": {
+    "@edsolater/fnkit": "^0.1.10",
+    "@emotion/css": "^11.10.5",
     "solid-js": "^1.6.10"
   }
 }
