--- a/package.json
+++ b/package.json
@@ -13,14 +13,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@solidjs/testing-library": "^0.6.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "jsdom": "^21.1.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
-    "vite-plugin-solid": "^2.5.0",
-    "vitest": "^0.28.4"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@edsolater/fnkit": "^0.1.10",
